--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-    "name": "alexa-skill-nodejs810-construct",
-    "version": "0.1.0",
-    "main": "bin/index.js",
-    "types": "bin/index.d.ts",
-    "bin": {
-        "alexa-skill-nodejs810-construct": "bin/alexa-skill-nodejs810-construct.js"
-    },
-    "scripts": {
-        "build": "tsc",
-        "watch": "tsc -w",
-        "cdk": "cdk"
-    },
-    "devDependencies": {
-        "@types/node": "^8.9.4",
-        "typescript": "^3.1.2",
-        "aws-cdk": "^0.18.1"
-    },
-    "dependencies": {
-        "@aws-cdk/aws-sns": "^0.18.1",
-        "@aws-cdk/aws-sqs": "^0.18.1",
-        "@aws-cdk/cdk": "^0.18.1"
-    }
+  "name": "alexa-skill-nodejs810-construct",
+  "version": "0.1.0",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
+  "bin": {
+    "alexa-skill-nodejs810-construct": "lib/alexa-skill-nodejs810-construct.js"
+  },
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w",
+    "cdk": "cdk"
+  },
+  "devDependencies": {
+    "@types/node": "^8.9.4",
+    "typescript": "^3.1.2",
+    "aws-cdk": "^0.18.1"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-codebuild": "^0.18.1",
+    "@aws-cdk/aws-codecommit": "^0.18.1",
+    "@aws-cdk/aws-events": "^0.18.1",
+    "@aws-cdk/aws-lambda": "^0.18.1",
+    "@aws-cdk/cdk": "^0.18.1"
+  },
+  "description": "* `npm run build`   compile typescript to js  * `npm run watch`   watch for changes and compile  * `cdk deploy -c skillId=<SkillId> -c skillName=<SkillName>`      deploy this stack to your default AWS account/region  * `cdk diff`        compare deployed stack with current state  * `cdk synth -c skillId=<SkillId> -c skillName=<SkillName>`       emits the synthesized CloudFormation template",
+  "directories": {
+    "lib": "lib"
+  },
+  "author": "Sanket Nayak",
+  "license": "ISC",
+  "keywords": [
+    "Alexa",
+    "skill",
+    "cdk",
+    "infrastructure"
+  ]
 }
